--- a/novobench.yaml
+++ b/novobench.yaml
@@ -161,7 +161,7 @@ dependencies:
     - natsort==8.4.0
     - networkx==3.2.1
     - numba==0.57.1
-    - numpy==1.26.4
+    - numpy<2.0.0
     - nvidia-cublas-cu12==12.1.3.1
     - nvidia-cuda-cupti-cu12==12.1.105
     - nvidia-cuda-nvrtc-cu12==12.1.105
